<resources>
    <string name="app_name">My Application</string>

    <string name="tab_transactions">Transactions</string>
    <string name="tab_statistics">Statistics</string>

    <string name="title_transactions">Transactions</string>
    <string name="title_new_transaction">New transaction</string>
    <string name="title_statistics">Statistics</string>

    <string name="title_balance">Balance: %s</string>

    <string name="hint_transaction_type">Transaction type</string>
    <string name="hint_date_time">Date and time</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>
    <string name="hint_category">Category</string>
    <string name="button_save">Save</string>
    <string name="title_add_transaction_date_picker">Select transaction date</string>
    <string name="title_add_transaction_time_picker">Select transaction time</string>

    <string name="error_add_transaction_empty_date_time">Select date and time</string>
    <string name="error_add_transaction_empty_category">Select category</string>
    <string name="error_add_transaction_invalid_amount">Invalid amount format</string>
    <string name="error_add_transaction_amount_zero">Please enter amount > 0</string>

    <string-array name="transactionTypes">
        <item name="income">Income</item>
        <item name="expense">Expense</item>
    </string-array>

    <string-array name="incomeCategories">
        <item name="salary">@string/category_income_salary</item>
        <item name="pension">@string/category_income_pension</item>
        <item name="scolarship">@string/category_income_scolarship</item>
        <item name="bonus">@string/category_income_bonus</item>
    </string-array>

    <string-array name="expenseCategories">
        <item name="food">@string/category_expense_food</item>
        <item name="home">@string/category_expense_home</item>
        <item name="entertainment">@string/category_expense_entertainment</item>
        <item name="gifts">@string/category_expense_gifts</item>
        <item name="health">@string/category_expense_health</item>
        <item name="clothing">@string/category_expense_clothing</item>
        <item name="education">@string/category_expense_education</item>
        <item name="others">@string/category_expense_other</item>
    </string-array>

    <string name="category_income_salary">Salary</string>
    <string name="category_income_pension">Pension</string>
    <string name="category_income_scolarship">Scolarship</string>
    <string name="category_income_bonus">Bonus</string>
    <string name="category_expense_food">Food</string>
    <string name="category_expense_home">Home</string>
    <string name="category_expense_entertainment">Entertainment</string>
    <string name="category_expense_gifts">Gifts</string>
    <string name="category_expense_health">Health</string>
    <string name="category_expense_clothing">Clothing</string>
    <string name="category_expense_education">Education</string>
    <string name="category_expense_other">Other</string>

    <string name="title_statistics_overview">Overview</string>
    <string name="title_statistics_income">Income:</string>
    <string name="title_statistics_expense">Expense:</string>
    <string name="title_statistics_total">Total:</string>
    <string name="title_statistics_chart">Structure</string>
    <string name="title_statistics_chart_income">Incomes</string>
    <string name="title_statistics_chart_expense">Expenses</string>
</resources>